@@ -125,6 +125,11 @@ tasks.withType<JavaCompile> {
 tasks.withType<Test> {
     useJUnitPlatform()
 
+    jvmArgs(
+        "--enable-native-access=ALL-UNNAMED",
+        "-Xshare:off"
+    )
+
     systemProperty(
         "spring.session.jdbc.cleanup-cron",
         "-"
